Making progress towards displaying the content

--- a/src/template.html
+++ b/src/template.html
@@ -8,6 +8,6 @@
     <body>
          <section class='nav'></section> 
          <main class='main-content'></main>
-         <form class="form-modal" name="weather-form" method="get" action="#" novalidate></form>
+         <form class="form-modal" name="weather-form" method="get" action="#"></form>
     </body>
 </html>
